--- a/css/main.css
+++ b/css/main.css
@@ -21,10 +21,12 @@ ul {
     border-style: solid;
     border-color: crimson; */
     /* border: 4px solid crimson; */
-    border-bottom: 4px solid crimson;
-    border-left: 8px dashed crimson;
+    border-bottom: 4px dottted crimson;
+    border-left: 8px dashed #df3f67;
 }
 
 li {
     list-style-type:none;
+    /* text-shadow: 2px 2px lightgray; */
+    text-shadow: 2px 2px #e9e9e9;
 }
