--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-h1 {
+/* /* h1 {
     color: orange;
     background-color: slategray;
     font-size: 20px;
@@ -19,14 +19,12 @@ p {
 ul {
     /* border-width: 4px;
     border-style: solid;
-    border-color: crimson; */
-    /* border: 4px solid crimson; */
     border-bottom: 4px dottted crimson;
     border-left: 8px dashed #df3f67;
 }
 
 li {
     list-style-type:none;
-    /* text-shadow: 2px 2px lightgray; */
     text-shadow: 2px 2px #e9e9e9;
-}
+} */
+ */
